--- a/animal.html
+++ b/animal.html
@@ -18,6 +18,16 @@
 
     <p id="result">This text will be replaced</p>
 
+    <div id="container">
+      <img
+        id="image"
+        src="diet-coke.jpeg"
+        width="150"
+        height="150"
+        onclick="selectImage()"
+      />
+    </div>
+
     <script>
       wrong = 0;
       correct = 0;
@@ -36,7 +46,25 @@
         out = document.getElementById("result");
         out.innerHTML = "Correct: " + correct + "</br>Wrong: " + wrong;
       }
+
+      useImage = 1;
+      function selectImage() {
+        image = document.getElementById("image");
+        switch (useImage) {
+          case 1:
+            image.src = "root-beer.jpeg";
+            useImage = 2;
+            break;
+          case 2:
+            image.src = "iced-coffee.jpeg";
+            useImage = 3;
+            break;
+          case 3:
+            image.src = "diet-coke.jpeg";
+            useImage = 1;
+            break;
+        }
+      }
     </script>
   </body>
 </html>
-
