--- a/discount.html
+++ b/discount.html
@@ -20,7 +20,38 @@
 
     <p id="result">This text will be replaced</p>
 
+    <form>
+        <input type="radio" id="sum" name="operation" value="sum" onclick="chooseOp()">
+        <label for="sum" >Sum</label></br>
+      
+        <input type="radio" id="mult" name="operation" value="mult" onclick="chooseOp()">
+        <label for="mult" >Multiply</label></br>
+      
+        <input type="radio" id="exp" name="operation" value="exp" onclick="chooseOp()">
+        <label for="exp">Exponent</label></br>
+      </form>
+
     <script>
+      function chooseOp() {
+        var price = parseFloat(document.getElementById("price").value);
+        var discount = parseFloat(document.getElementById("dis").value);
+
+        var operation = document.querySelector('input[name="operation"]:checked').value;
+
+        var result;
+        if(operation == "sum") {
+          result = price + discount;
+        }
+        else if(operation == "mult") {
+          result = price * discount;
+        }
+        else if (operation == "exp") {
+          result = Math.pow(price, discount);
+        }
+
+        document.getElementById("result").innerHTML = "Result: " + result;
+      }
+
       function discount() {
         console.log("Getting form values");
         price = document.getElementById("price").value;
